Bug: misaligned status message aligned

--- a/client/src/components/form.css
+++ b/client/src/components/form.css
@@ -50,3 +50,6 @@
   font-weight: bold;
   color: white;
 }
+.container__status {
+  align-self: center;
+}
